# email-assistant-api

./: README.md  emailassistant.db  pyproject.toml
app/: crud.py  database.py  helper.py  main.py  models.py  routes.py  schemas.py
